Fix contrast

--- a/popup.css
+++ b/popup.css
@@ -1,5 +1,14 @@
 :root {
   color-scheme: dark light;
+  --accent-color: hsl(340deg 100% 43%);
+  --link-color: blue;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --accent-color: hotpink;
+    --link-color: #03a9f4;
+  }
 }
 
 body {
@@ -18,7 +27,7 @@ h1 {
 
 h2 {
   font-size: 0.85rem;
-  color: hotpink;
+  color: var(--accent-color);
   margin-block-end: 0.25rem;
 }
 
@@ -27,27 +36,27 @@ span {
 }
 
 a {
-  color: #03a9f4;
+  color: var(--link-color);
 }
 
 a:link {
-  color: #03a9f4;
+  color: var(--link-color);
 }
 
 a:visited {
-  color: #03a9f4;
+  color: var(--link-color);
 }
 
 a:focus {
-  color: hotpink;
+  color: var(--accent-color);
 }
 
 a:hover {
-  color: hotpink;
+  color: var(--accent-color);
 }
 
 a:active {
-  color: hotpink;
+  color: var(--accent-color);
 }
 
 .parent {
@@ -70,7 +79,7 @@ a:active {
 }
 
 ::marker {
-  color: hotpink;
+  color: var(--accent-color);
 }
 
 li {
